syntax = "proto3";

package transaction_storage;

import "koinos/protocol/protocol.proto";


// @description Stores a transaction on the blockchain
// @read-only false
message store_transaction_arguments {
  koinos.protocol.transaction transaction = 1;
}

message store_transaction_result {
}